<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="random"
        android:entries="@array/text_generator_labels"
        android:entryValues="@array/text_generator_values"
        android:key="selfdefined_text_generator"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/text_generator_type"
        app:useSimpleSummaryProvider="true" />

    <com.paddlesandbugs.dahdidahdit.settings.NumericPreference
        android:defaultValue="50"
        android:key="selfdefined_text_first_n"
        android:title="@string/selfdefined_text_first_n"
        android:max="2000"
        app:min="1"
        app:showSeekBarValue="true"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="selfdefined_rss_provider"
        android:defaultValue=""
        android:entries="@array/rss_provider_labels"
        android:entryValues="@array/rss_provider_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/rss_provider"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="selfdefined_rss_feed"
        android:defaultValue=""
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/rss_provider_feed"
        app:useSimpleSummaryProvider="true" />


    <Preference
        app:fragment="com.paddlesandbugs.dahdidahdit.settings.SelfdefinedFragmentCurrent"
        app:key="selfdefined_from"
        app:summary="@string/selfdefined_summary_current"
        app:title="@string/settings_selfdefined_header_current" />


    <ListPreference
        android:defaultValue="60"
        android:entries="@array/session_duration_labels"
        android:entryValues="@array/session_duration_values"
        android:key="selfdefined_session_duration_S"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/session_length_S"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:defaultValue="3"
        android:key="selfdefined_session_start_pause_duration_S"
        android:max="20"
        android:title="@string/presession_pause_S"
        app:min="0"
        app:showSeekBarValue="true"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="selfdefined_chirp"
        android:title="@string/selfdefined_chirp"
        app:summary="@string/selfdefined_chirp_description"
        />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/QRX_labels"
        android:entryValues="@array/QRX_values"
        android:key="selfdefined_qlf2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/selfdefined_qlf"
        app:summary="@string/selfdefined_qlf_description"
        />

    <EditTextPreference
        android:defaultValue="vvv&lt;ka&gt;"
        android:key="selfdefined_text"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/custom_text"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="selfdefined_text_chooser"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/load_text"
        app:useSimpleSummaryProvider="true" />


</PreferenceScreen>