<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBarPreference
        android:defaultValue="20"
        android:key="headcopy_to_wpm"
        android:max="40"
        android:title="@string/words_per_minute"
        app:min="10"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:defaultValue="20"
        android:key="headcopy_to_effwpm"
        android:max="40"
        android:title="@string/eff_words_per_minute"
        app:min="10"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/QRX_labels"
        android:entryValues="@array/QRX_values"
        android:key="headcopy_to_qsb"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/QSB"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/QRX_labels"
        android:entryValues="@array/QRX_values"
        android:key="headcopy_to_qrm"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/QRM"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/QRX_labels"
        android:entryValues="@array/QRX_values"
        android:key="headcopy_to_qrn"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/QRN"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>